# resume

./: .gitignore  A_draw_sdi  Dockerfile  FBStories.md  buildspec-resumejson.yaml  buildspec.yaml  drift.js  login.html  package-lock.json  questions.txt  questionsFB.txt  resume.json  resume.json.bak  resumeML.json  stories.txt  theme.js  themeML.js
login/: index.html  script.js
resume/: Cargo.toml
resume/src/: main.rs
study/: A_draw_behavioral  A_draw_code_curated  A_draw_code_ranked  behavioral.py  questions.txt  storiesFB.txt
